tag: 0.2.1. Removed old files. Added 2 files.

--- a/257-h/257-h.htm
+++ b/257-h/257-h.htm
@@ -1,50 +1,38 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html lang="en">
-<head>
-<meta http-equiv="Content-Type"
-    content="text/html; charset=us-ascii">
-<title>
-    Troilus and Criseyde,
-    by Geoffrey Chaucer
-</title>
+<?xml version="1.0" encoding="us-ascii"?>
 
-<style type="text/css">
-    <!--
-		body { text-align:justify}
-    P { margin:10%;
-		    text-indent:   1em;
-        margin-top:    .75em;
-        margin-bottom: .75em; }
+<!DOCTYPE html
+   PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd" >
+
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+  <head>
+    <title>
+      Troilus and Criseyde, by Geoffrey Chaucer
+    </title>
+    <style type="text/css" xml:space="preserve">
+    
+    body { margin:5%; background:#faebd0; text-align:justify}
+    P { text-indent: 1em; margin-top: .25em; margin-bottom: .25em; }
     H1,H2,H3,H4,H5,H6 { text-align: center; margin-left: 15%; margin-right: 15%; }
-		hr  { width: 50%; }
-    hr.full { width: 100%; }
-    .foot { margin-left: 10%; margin-right: 10%; text-align: justify; text-indent: -3em; font-size: 95%; }
-		img {border: 0;}
-    HR  { width: 33%; text-align: center; }
-		blockquote {font-size: 97%; }
-		.pagenum  { /* uncomment the next line for invisible page numbers */
-            /*  visibility: hidden;  */
-                position: absolute;
-                left: 1%;
-                font-size: smaller;
-                text-align: left;
-                color: gray;
-              } /* page numbers */
-		.figleft   {float: left; margin-left: 10%; margin-right: 1%;}
-    .figright  {float: right; margin-right: 10%; margin-left: 1%;}
-		.toc       { margin-left: 5%; margin-bottom: .75em; font-size: 100%;}
-    .toc2      { margin-left: 5%;}
-    CENTER { padding: 10px;}
-		PRE    { font-family: Times; font-size: 110%; margin-left: 20%;}
-    // -->
+    hr  { width: 50%; text-align: center;}
+    .foot { margin-left: 20%; margin-right: 20%; text-align: justify; text-indent: -3em; font-size: 90%; }
+    blockquote {font-size: 97%; font-style: italic; margin-left: 10%; margin-right: 10%;}
+    .mynote    {background-color: #DDE; color: #000; padding: .5em; margin-left: 10%; margin-right: 10%; font-family: sans-serif; font-size: 95%;}
+    .toc       { margin-left: 10%; margin-bottom: .75em;}
+    .toc2      { margin-left: 20%;}
+    div.fig    { display:block; margin:0 auto; text-align:center; }
+    div.middle { margin-left: 20%; margin-right: 20%; text-align: justify; }
+    .figleft   {float: left; margin-left: 0%; margin-right: 1%;}
+    .figright  {float: right; margin-right: 0%; margin-left: 1%;}
+    .pagenum   {display:inline; font-size: 70%; font-style:normal;
+               margin: 0; padding: 0; position: absolute; right: 1%;
+               text-align: right;}
+    pre        { font-style: italic; font-size: 90%; margin-left: 10%;}
+    
 </style>
-
-
-</head>
-<body>
-
-
-<pre>
+  </head>
+  <body>
+<pre xml:space="preserve">
 
 The Project Gutenberg EBook of Troilus and Criseyde, by Geoffrey Chaucer
 
@@ -59,7 +47,7 @@ Title: Troilus and Criseyde
 Author: Geoffrey Chaucer
 
 Release Date: July 12, 2008 [EBook #257]
-[This file last updated on July 20, 2010]
+Last Updated: January 26, 2013
 
 Language: English
 
@@ -77,72 +65,64 @@ Produced by Douglas B. Killings, Diane M. Brendan, and David Widger
 
 
 </pre>
-
-
-<br><br>
-
-<h1>
-    TROILUS AND CRISEYDE
-</h1><br />
-
-<h2>
-by Geoffrey Chaucer
-</h2>
-
-
-
-
-<br />
-<br />
-<hr>
-<br />
-<br />
-
-
-<h2>Contents</h2>
-
-
-<center>
-<table summary="">
-<tr><td>
-
-
-
-<p class="toc"><a href="#2H_4_0001">
-BOOK I. Incipit Liber Primus
-</a></p>
-<p class="toc"><a href="#2H_4_0002">
-BOOK II. Incipit Prohemium Secundi Libri.
-</a></p>
-<p class="toc"><a href="#2H_4_0003">
-BOOK III. Incipit prohemium tercii libri.
-</a></p>
-<p class="toc"><a href="#2H_4_0004">
-BOOK IV. Incipit Prohemium Liber Quartus.
-</a></p>
-<p class="toc"><a href="#2H_4_0005">
-BOOK V. Incipit Liber Quintus.
-</a></p>
-
-
-</td></tr>
-</table>
-</center>
-
-
-
-<br />
-<br />
-<hr>
-<br />
-<br />
-<a name="2H_4_0001"><!-- H2 anchor --></a>
-
-
-<h2>
-    BOOK I. Incipit Liber Primus
-</h2>
-<pre>
+    <p>
+      <br /><br />
+    </p>
+    <h1>
+      TROILUS AND CRISEYDE
+    </h1>
+    <p>
+      <br />
+    </p>
+    <h2>
+      by Geoffrey Chaucer
+    </h2>
+    <p>
+      <br /> <br />
+    </p>
+    <hr />
+    <p>
+      <br /> <br />
+    </p>
+    <h2>
+      Contents
+    </h2>
+    <table summary="" style="margin-right: auto; margin-left: auto">
+      <tr>
+        <td>
+          <p class="toc">
+            <a href="#link2H_4_0001"> BOOK I. Incipit Liber Primus </a>
+          </p>
+          <p class="toc">
+            <a href="#link2H_4_0002"> BOOK II. Incipit Prohemium Secundi Libri.
+            </a>
+          </p>
+          <p class="toc">
+            <a href="#link2H_4_0003"> BOOK III. Incipit prohemium tercii libri.
+            </a>
+          </p>
+          <p class="toc">
+            <a href="#link2H_4_0004"> BOOK IV. Incipit Prohemium Liber Quartus.
+            </a>
+          </p>
+          <p class="toc">
+            <a href="#link2H_4_0005"> BOOK V. Incipit Liber Quintus. </a>
+          </p>
+        </td>
+      </tr>
+    </table>
+    <p>
+      <br /> <br />
+    </p>
+    <hr />
+    <p>
+      <br /> <br /> <a name="link2H_4_0001" id="link2H_4_0001">
+      <!--  H2 anchor --> </a>
+    </p>
+    <h2>
+      BOOK I. Incipit Liber Primus
+    </h2>
+<pre xml:space="preserve">
                  The double sorwe of Troilus to tellen,  1
                That was the king Priamus sone of Troye,
                In lovinge, how his aventures fellen
@@ -1395,14 +1375,17 @@ BOOK V. Incipit Liber Quintus.
 
                Explicit Liber Primus
 </pre>
-<a name="2H_4_0002"><!-- H2 anchor --></a>
-
-<div style="height: 4em;"><br><br><br><br></div>
-
-<h2>
-    BOOK II. Incipit Prohemium Secundi Libri.
-</h2>
-<pre>
+    <p>
+      <a name="link2H_4_0002" id="link2H_4_0002">
+      <!--  H2 anchor --> </a>
+    </p>
+    <div style="height: 4em;">
+      <br /><br /><br /><br />
+    </div>
+    <h2>
+      BOOK II. Incipit Prohemium Secundi Libri.
+    </h2>
+<pre xml:space="preserve">
                  Out of these blake wawes for to sayle,
                O wind, O wind, the weder ginneth clere;
                For in this see the boot hath swich travayle,
@@ -1461,7 +1444,7 @@ BOOK V. Incipit Liber Quintus.
 
                Exclipit prohemium Secundi Libri.
 </pre>
-<pre>
+<pre xml:space="preserve">
                Incipit Liber Secundus.
 
                In May, that moder is of monthes glade,  50
@@ -3418,14 +3401,17 @@ BOOK V. Incipit Liber Quintus.
 
                Explicit Secundus Liber.
 </pre>
-<a name="2H_4_0003"><!-- H2 anchor --></a>
-
-<div style="height: 4em;"><br><br><br><br></div>
-
-<h2>
-    BOOK III. Incipit prohemium tercii libri.
-</h2>
-<pre>
+    <p>
+      <a name="link2H_4_0003" id="link2H_4_0003">
+      <!--  H2 anchor --> </a>
+    </p>
+    <div style="height: 4em;">
+      <br /><br /><br /><br />
+    </div>
+    <h2>
+      BOOK III. Incipit prohemium tercii libri.
+    </h2>
+<pre xml:space="preserve">
                O blisful light of whiche the bemes clere  1
                Adorneth al the thridde hevene faire!
                O sonnes lief, O Ioves doughter dere,
@@ -3486,7 +3472,7 @@ BOOK V. Incipit Liber Quintus.
 
                Incipit Liber Tercius.
 </pre>
-<pre>
+<pre xml:space="preserve">
                 Lay al this mene whyle Troilus,  50
                Recordinge his lessoun in this manere,
                `Ma fey!' thought he, `Thus wole I seye and thus;
@@ -5513,14 +5499,17 @@ BOOK V. Incipit Liber Quintus.
 
                Explicit Liber Tercius.
 </pre>
-<a name="2H_4_0004"><!-- H2 anchor --></a>
-
-<div style="height: 4em;"><br><br><br><br></div>
-
-<h2>
-    BOOK IV. Incipit Prohemium Liber Quartus.
-</h2>
-<pre>
+    <p>
+      <a name="link2H_4_0004" id="link2H_4_0004">
+      <!--  H2 anchor --> </a>
+    </p>
+    <div style="height: 4em;">
+      <br /><br /><br /><br />
+    </div>
+    <h2>
+      BOOK IV. Incipit Prohemium Liber Quartus.
+    </h2>
+<pre xml:space="preserve">
                  But al to litel, weylaway the whyle,
                Lasteth swich Ioye, y-thonked be Fortune!
                That semeth trewest, whan she wol bygyle,
@@ -7471,14 +7460,17 @@ BOOK V. Incipit Liber Quintus.
 
                Explicit Liber Quartus.
 </pre>
-<a name="2H_4_0005"><!-- H2 anchor --></a>
-
-<div style="height: 4em;"><br><br><br><br></div>
-
-<h2>
-    BOOK V. Incipit Liber Quintus.
-</h2>
-<pre>
+    <p>
+      <a name="link2H_4_0005" id="link2H_4_0005">
+      <!--  H2 anchor --> </a>
+    </p>
+    <div style="height: 4em;">
+      <br /><br /><br /><br />
+    </div>
+    <h2>
+      BOOK V. Incipit Liber Quintus.
+    </h2>
+<pre xml:space="preserve">
                Aprochen gan the fatal destinee
                That Ioves hath in disposicioun,
                And to yow, angry Parcas, sustren three,
@@ -9634,18 +9626,10 @@ BOOK V. Incipit Liber Quintus.
 
                Explicit Liber Troili et Criseydis.
 </pre>
-
-
-<br><br>
-
-
-
-
-
-
-
-
-<pre>
+    <p>
+      <br /><br />
+    </p>
+<pre xml:space="preserve">
 
 
 
@@ -10015,6 +9999,5 @@ subscribe to our email newsletter to hear about new eBooks.
 
 
 </pre>
-
-</body>
+  </body>
 </html>
